--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.74"
 maelstrom-node = "0.1.6"
+serde_json = "1.0.107"
+uuid = { version = "1.5.0", features = ["v4"] }
 
 [[bin]]
 name = "echo"
+
+[[bin]]
+name = "unique_ids"
