--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,5 @@ edition = "2021"
 async-trait = "0.1.74"
 maelstrom-node = "0.1.6"
 serde_json = "1.0.107"
+tokio = { version = "1.33.0", features = ["sync"] }
 uuid = { version = "1.5.0", features = ["v4"] }
-
-[[bin]]
-name = "echo"
-
-[[bin]]
-name = "unique_ids"
