--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.74"
+futures = "0.3.28"
+log = "0.4.20"
 maelstrom-node = "0.1.6"
 serde_json = "1.0.107"
 tokio = { version = "1.33.0", features = ["sync"] }
+tokio-context = "0.1.3"
 uuid = { version = "1.5.0", features = ["v4"] }
